<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="150dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp">

        <ImageView
            android:id="@+id/imgProduct"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/empty"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/nameProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/imgProduct"
            android:text="@string/name_product" />

        <TextView
            android:id="@+id/priceProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/imgProduct"
            android:layout_below="@+id/nameProduct"
            android:text="@string/price_product"/>

        <TextView
            android:id="@+id/locationProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/imgProduct"
            android:layout_below="@+id/priceProduct"
            android:text="@string/location_product"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>